--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ digest = "0.10"
 derivative = { version = "2.0", features = ["use_core"] }
 tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
 
+sha2 = { version = "0.10", default-features = false }
+
 [dev-dependencies]
 
 [profile.release]
