--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,10 @@ tracing = { version = "0.1", default-features = false, features = [ "attributes"
 
 sha2 = { version = "0.10", default-features = false }
 
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+
 [dev-dependencies]
 
 [profile.release]
