--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ sha2 = { version = "0.10", default-features = false }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+hex = "0.4"
 
 [dev-dependencies]
 
