--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,12 @@ derivative = { version = "2.0", features = ["use_core"] }
 tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
 
 sha2 = { version = "0.10", default-features = false }
+hex ={version = "0.4.3"}
+num-bigint = {version = "0.4.4"}
 
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-hex = "0.4"
 
 [dev-dependencies]
 
