--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ derivative = { version = "2.0", features = ["use_core"] }
 tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
 
 sha2 = { version = "0.10", default-features = false }
+hex ={version = "0.4.3"}
 
 [dev-dependencies]
 
