--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,10 @@ tracing = { version = "0.1", default-features = false, features = [ "attributes"
 sha2 = { version = "0.10", default-features = false }
 hex ={version = "0.4.3"}
 
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+
 [dev-dependencies]
 
 [profile.release]
