--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 
 [dev-dependencies]
+num-bigint = { version = "^0.4.0", default-features = false }
 
 [profile.release]
 opt-level = 3
