--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ ark-snark = { version = "^0.4.0", default-features = false }
 
 ark-serialize = { version = "^0.4.0", default-features = false }
 
-ark-crypto-primitives = { version = "^0.4.0", default-features = true, features = ["signature"]}
+ark-crypto-primitives = { version = "^0.4.0", default-features = true, features = ["signature", "crh"]}
 blake2 = { version = "0.10" }
 digest = "0.10"
 derivative = { version = "2.0", features = ["use_core"] }
